# student-e-voting-blockchain

backend/: package-lock.json  package.json
backend/src/modules/blockchain/: blockchain.ts  index.ts
blockchain/: .gitignore  Cargo.toml
blockchain/src/: lib.rs  main.rs
blockchain/src/crypto/: consts.rs  merkle.rs  mod.rs  sha.rs  utils.rs
blockchain/src/primitives/: address.rs  block.rs  chain.rs  mod.rs  transaction.rs
blockchain/src/rpc/: methods.rs
contracts/: .gitignore  Cargo.toml  README.md  optimise.ps1  tsconfig.json
contracts/contracts/e-voting/: Cargo.toml
contracts/contracts/e-voting/src/: coin_helpers.rs  contract.rs  error.rs  lib.rs  msg.rs  response.rs  state.rs  tests.rs  utils.rs  voting.rs
contracts/contracts/token/: Cargo.toml
contracts/contracts/token/src/: contract.rs
contracts/contracts/whitelist/: Cargo.toml
contracts/contracts/whitelist/src/: contract.rs
contracts/scripts/: consts.ts  deploy-all.ts  deploy-contract.ts  deploy-token.ts  deploy-whitelist-and-token.ts  deploy-whitelist.ts  tst.ts  utils.ts
cron/src/: index.ts
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: http.ts  lcd.ts  utils.ts  walletController.ts
frontend/src/lib/components/: CurrentPolls.svelte  GiftSection.svelte  NavBar.svelte  PastPolls.svelte  Poll.svelte  PollCard.svelte  PollColumn.svelte  PollInformation.svelte  PollStats.svelte  TokenBalance.svelte  (+5 more)
frontend/src/routes/: +layout.svelte  +page.js  +page.svelte
mixnet/: package-lock.json  package.json
mixnet-node/: package-lock.json  package.json
mixnet-node/src/: app.ts  db.ts  types.ts
mixnet/db/: db.sqlite
mixnet/src/: app.ts
mixnet/src/workers/: queueWorker.js  queueWorker.ts
(+26 files in other folders)
